--- a/assets/style/login_register.css
+++ b/assets/style/login_register.css
@@ -21,35 +21,24 @@ html, body {
   box-sizing: unset !important;
 }
 
-body {
-  max-width: 1980px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  font-family: Roboto-regular;
-  font-size: 14px;
-}
+/*span {*/
+/*  color: #5F5C5A;*/
+/*  font-family: Roboto-light;*/
+/*}*/
 
-span {
-  color: #5F5C5A;
-  font-family: Roboto-light;
-}
-
-h1 {
-  color: #E2571C;
-}
-
-a, a:link {
-  color: #E2571C;
-  font-family: Roboto-light;
-}
+/*h1 {*/
+/*  color: #E2571C;*/
+/*}*/
 
 .login-container {
   display: flex;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 0;
   border-radius: 20px;
+  position: absolute;
+  width: 800px;
+  left: calc(50% - 400px);
+  top: 100px;
 }
 
 .content {
@@ -67,17 +56,18 @@ a, a:link {
 .content > div {
   padding-left: 32px;
   padding-right: 16px;
+  margin-top: 30px;
 }
 
-form {
+.auth-form {
   display: flex;
   flex-direction: column;
   gap: 16px;
   width: 100%;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
-form > div {
+.auth-form > div {
   display: flex;
   justify-content: space-between;
 }
