--- a/assets/style/profile.css
+++ b/assets/style/profile.css
@@ -38,6 +38,7 @@
   font-family: Roboto-medium;
   transition: .6s all;
   cursor: pointer;
+  color: #5F5C5A;
 }
 
 .profile-navigation > a:hover {
@@ -72,6 +73,7 @@ a.nuxt-link-exact-active {
   border-radius: 28px;
   cursor: pointer;
   user-select: none;
+  object-fit: cover;
 }
 
 .profile-user-data {
@@ -118,14 +120,14 @@ a.nuxt-link-exact-active {
 
 .profile-user-image-icon {
   position: absolute;
-  right: 10px;
-  top: 180px;
+  right: 5px;
+  top: 90px;
   transition: .3s all;
   cursor: pointer;
 }
 
 .profile-user-image-icon:hover {
-  transform: scale(1.4);
+  transform: scale(1.1);
 }
 
 .profile-password-settings {
