--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,10 +1,10 @@
 html, body {
-  margin: 0;
   font-family: Roboto-regular;
 }
 
 body {
   max-width: 1980px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -94,8 +94,6 @@ a, a:link, a:visited {
   font-family: Roboto-light;
 }
 
-
-
 main {
   max-width: 1980px;
   width: 100%;
@@ -106,6 +104,8 @@ main {
   height: auto;
   flex-direction: column;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .specialist-banner {
@@ -144,6 +144,7 @@ main {
   width: 100%;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .pagination > img {
@@ -162,7 +163,7 @@ main {
   color: #5F5C5A;
 }
 
-.pagination-button:hover {
+.pagination-button:hover, .pagination-button-active {
   background-color: #FF9264;
   cursor: pointer;
   margin-left: 5px;
