--- a/assets/style/profile.css
+++ b/assets/style/profile.css
@@ -4,9 +4,12 @@
   position: absolute;
   right: 0;
   left: 0;
-  height: 30vh;
+  height: 15vh;
+  display: flex;
+  color: white;
+  align-items: center;
+  justify-content: center;
 }
-
 
 .profile-container {
   padding: 64px;
@@ -19,6 +22,7 @@
   display: flex;
   gap: 32px;
   max-width: 1000px;
+
 }
 
 .profile-navigation {
